--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <div class="site-header-bar">
             <div class="site-header-title-container">
                 <p class="site-title">
-                    Oakland City
+                    Oakland City Data
                 </p>
             </div>
         </div>
